# local-mcp

./: .env.debug.example  .env.dev.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/examples/: post_adf_comment.py
src/: config.py  server.py
src/clients/: __init__.py  atlassian.py  elasticsearch.py  kafka.py  observability.py  obsidian.py  postgres.py  redis.py
src/jira/: __init__.py  adf.py
src/tools/: __init__.py  apm.py  bitbucket.py  confluence.py  elasticsearch.py  figma.py  jira.py  kafka.py  observability.py  obsidian.py  postgres.py  redis.py
tests/: __init__.py  conftest.py  test_apm_tools.py  test_atlassian_client.py  test_bitbucket_tools.py  test_config.py  test_confluence_tools.py  test_elasticsearch_client.py  test_elasticsearch_tools.py  test_figma_tools.py  test_jira_adf.py  test_jira_tools.py  test_kafka_client.py  test_kafka_tools.py  test_observability_client.py  test_observability_tools.py  test_obsidian_tools.py  test_postgres_client.py  test_postgres_tools.py  test_redis_client.py  test_redis_tools.py
